--- a/styles/style.css
+++ b/styles/style.css
@@ -68,7 +68,7 @@ ol {
 }
 
 .content__list-container {
-  overflow-y: scroll;
+  overflow-y: auto;
   height: 298px;
   width: 399px;
   margin-top: 10px;
@@ -216,7 +216,7 @@ ol {
   border-right: 1px solid transparent;
   border-top: 1px solid white;
   border-bottom: 1px solid white;
-  background-color:  transparent;
+  background-color:  inherit;
   appearance: none;
   width: 225px;
 }
@@ -240,9 +240,10 @@ ol {
 .search-form__pseudo-checkbox {
   height: 19px;
   width: 19px;
-  border: 1px solid white;
+  outline: 1px solid white;
   margin-right: 3.5px;
-  cursor: pointer
+  cursor: pointer;
+  padding: 1px;
 }
 
 .search-form__pseudo-checkbox::after {
@@ -277,7 +278,7 @@ ol {
 }
 
 .button {
-  border: 1px solid white;
+  outline: 1px solid white;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   font-weight: 700;
