--- a/styles/style.css
+++ b/styles/style.css
@@ -60,24 +60,6 @@ ol {
   justify-self: center;
 }
 
-.search-form {
-  display: flex;
-  justify-content: space-between;
-  align-content: flex-end;
-  width: 711px;
-}
-
-.content__list-container {
-  overflow-y: auto;
-  height: 298px;
-  width: 399px;
-  margin-top: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  position: relative;
-}
-
 .result {
   padding-top: 75px;
   width: 100%;
@@ -89,10 +71,6 @@ ol {
   position: relative;
 }
 
-.content__details {
-  width: 410px;
-}
-
 .result__video {
   width: 711px;
   height: 386px;
@@ -100,36 +78,15 @@ ol {
   object-position: center;
 }
 
-.content__list-item {
+.search-form {
   display: flex;
-  flex-direction: row;
-  padding-left: 3px;
-  padding-right: 3px;
-  cursor: pointer
+  justify-content: space-between;
+  align-content: flex-end;
+  width: 711px;
 }
 
-.content__list {
-  gap: 30px;
-  display: flex;
-  flex-direction: column;
-}
-
-.content__video-card {
-  display: flex;
-  align-items: flex-start;
-  width: 390px;
-  height: 103px;
-}
-
-.content__video-card-thumbnail {
-  min-width: 194px;
-  height: 103px;
-  object-fit: cover;
-  object-position: center;
-}
-
-.content__video-card-description-container {
-  width: 100%;
+.search-form__fieldset {
+  border: none;
 }
 
 .search-form__fieldset-title {
@@ -140,70 +97,26 @@ ol {
   margin-bottom: 5px;
 }
 
-.title {
-  font-family: Oswald, sans-serif;
-  font-weight: 700;
-  font-size: 75px;
-  line-height: 94%;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-}
-
-.content__accent {
-  color: #545050;
-}
-
-.content__card-link {
-  text-decoration: none;
-  color: #fff;
-  display: block;
-}
-
-.content__video-card-title {
-  font-family: Oswald, sans-serif;
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 100%;
-  text-transform: uppercase;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 190px;
-}
-
-.content__video-card-description {
-  font-family: 'Fira Sans Condensed', sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 16.2px;
-  letter-spacing: 0%;
-  padding-top: 6px;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 4;
-  overflow: hidden;
-}
-
-.visually-hidden {
-  position: absolute;
-  inline-size: 1px;
-  block-size: 1px;
-  overflow: hidden;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  white-space: nowrap;
-}
-
-.search-form__checkbox-list {
-  display: flex;
-  gap: 15px;
-}
-
 .search-form__label {
   display: flex;
   align-items: center;
   width: fit-content;
   gap: 1.5px;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid white;
+}
+
+.search-form__label-text {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 100%;
+}
+
+.search-form__label:hover .search-form__label-text {
+  text-decoration: underline;
 }
 
 .search-form__textfield {
@@ -229,12 +142,9 @@ ol {
   outline: none;
 }
 
-.search-form__label:has(:focus-visible) {
-  outline: 1px solid white;
-}
-
-.search-form__fieldset {
-  border: none;
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
 }
 
 .search-form__pseudo-checkbox {
@@ -243,30 +153,21 @@ ol {
   outline: 1px solid white;
   margin-right: 3.5px;
   cursor: pointer;
-  padding: 1px;
+  display: flex;
+  justify-content: center;
 }
 
 .search-form__pseudo-checkbox::after {
   content: "";
   background-color: #fff;
-  height: 100%;
-  width: 100%;
+  height: 90%;
+  width: 90%;
   display: none;
+  align-self: center;
 }
 
 .search-form__checkbox:checked ~ .search-form__pseudo-checkbox::after {
   display: block;
-}
-
-.search-form__label-text {
-  font-family: 'Fira Sans Condensed', sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 100%;
-}
-
-.search-form__label:hover .search-form__label-text {
-  text-decoration: underline;
 }
 
 .search-form__pseudo-checkbox:focus {
@@ -318,6 +219,72 @@ ol {
   outline: 1px solid white;
 }
 
+.content__list-container {
+  overflow-y: auto;
+  height: 298px;
+  width: 399px;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  position: relative;
+}
+
+.content__details {
+  width: 410px;
+}
+
+.content__list-item {
+  display: flex;
+  flex-direction: row;
+  padding-left: 3px;
+  padding-right: 3px;
+  cursor: pointer
+}
+
+.content__list {
+  gap: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.content__video-card {
+  display: flex;
+  align-items: flex-start;
+  width: 390px;
+  height: 103px;
+}
+
+.content__video-card-thumbnail {
+  min-width: 194px;
+  height: 103px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.content__video-card-description-container {
+  width: 100%;
+}
+
+.title {
+  font-family: Oswald, sans-serif;
+  font-weight: 700;
+  font-size: 75px;
+  line-height: 94%;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__card-link {
+  text-decoration: none;
+  color: #fff;
+  display: block;
+}
+
 .content__card-link_current {
   background-color: #545050;
 }
@@ -336,4 +303,38 @@ ol {
 
 .content__card-link:focus-visible {
   outline: solid 1px white;
+}
+
+.content__video-card-title {
+  font-family: Oswald, sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 100%;
+  text-transform: uppercase;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 190px;
+}
+
+.content__video-card-description {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 16.2px;
+  padding-top: 6px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  overflow: hidden;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
 }
