--- a/styles/style.css
+++ b/styles/style.css
@@ -179,7 +179,7 @@ ol {
 }
 
 .button {
-  outline: 1px solid white;
+  border: 1px solid white;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   font-weight: 700;
